@@ -423,17 +423,17 @@ static ngx_int_t
 init_module(ngx_cycle_t *cycle) {
     char *error_message;
 
-    passenger_enterprise_license_init();
-    error_message = passenger_enterprise_license_check();
-    if (error_message != NULL) {
-        ngx_errno = 0;
-        ngx_log_error(NGX_LOG_CRIT, cycle->log, ngx_errno, "%s", error_message);
-        free(error_message);
-        return NGX_ERROR;
-    }
-
     if (passenger_main_conf.fly_with.len != 0
      || passenger_main_conf.root_dir.len != 0) {
+        passenger_enterprise_license_init();
+        error_message = passenger_enterprise_license_check();
+        if (error_message != NULL) {
+            ngx_errno = 0;
+            ngx_log_error(NGX_LOG_CRIT, cycle->log, ngx_errno, "%s", error_message);
+            free(error_message);
+            return NGX_ERROR;
+        }
+
         if (first_start) {
             /* Ignore SIGPIPE now so that, if the helper server fails to start,
              * Nginx doesn't get killed by the default SIGPIPE handler upon
